...
                  children: [
                    Text(
                      'Não possui conta? ',
                      style: TextStyle(),
                    ),
                    GestureDetector(
                      key: const Key("signUpButton"),
                      onTap: () {
                        Navigator.push(
                          context,
                          MaterialPageRoute(builder: (context) => const SignUpPage()),
                        );
                      },
...
